增加若干任务

--- a/MDK-ARM/01_freertos_template/01_freertos_template.build_log.htm
+++ b/MDK-ARM/01_freertos_template/01_freertos_template.build_log.htm
@@ -22,21 +22,19 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\edge_download\STM32\prj\04FreeRTOS\watch\F103-FreeRTOS-watch\MDK-ARM\01_freertos_template.uvprojx
-Project File Date:  11/03/2025
+Project File Date:  11/04/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\edge_download\STM32\Keil_v5\ARM\ARMCC\Bin'
 Build target '01_freertos_template'
 compiling ShowMenu.c...
-..\mytask\ShowMenu.h(15): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\mytask\ShowMenu.c(26): warning:  #68-D: integer conversion resulted in a change of sign
+..\mytask\ShowMenu.c(35): warning:  #68-D: integer conversion resulted in a change of sign
   int8_t R_move_pos[5] = {-1, 9, 49, 89, 129};// 存储 5 个应用对应的水平（X）目标位置，用于导航切换时的图标移动动画
-..\mytask\ShowMenu.c: 2 warnings, 0 errors
+..\mytask\ShowMenu.c: 1 warning, 0 errors
 linking...
-Program Size: Code=16300 RO-data=2772 RW-data=1056 ZI-data=5456  
+Program Size: Code=27764 RO-data=33356 RW-data=1352 ZI-data=9936  
 FromELF: creating hex file...
-"01_freertos_template\01_freertos_template.axf" - 0 Error(s), 2 Warning(s).
+"01_freertos_template\01_freertos_template.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
